[gd_scene load_steps=18 format=2]

[ext_resource path="res://final/scripts/end.gd" type="Script" id=1]
[ext_resource path="res://asserts/themes/title_label.tres" type="Theme" id=2]
[ext_resource path="res://asserts/img/red-blood-drop-guttae-blood-dab970d241ab2886feb2860dc6bfbaf9.png" type="Texture" id=3]
[ext_resource path="res://asserts/characters/Mom_Umbrella_NOBG.png" type="Texture" id=4]
[ext_resource path="res://final/components/curve_btn.tscn" type="PackedScene" id=5]
[ext_resource path="res://asserts/themes/button/btn_normal_red.tres" type="StyleBox" id=6]
[ext_resource path="res://final/components/TextBubble.tscn" type="PackedScene" id=7]
[ext_resource path="res://asserts/fonts/MochiyPopOne-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://final/components/PanelContainer.tscn" type="PackedScene" id=9]
[ext_resource path="res://asserts/themes/main_theme.tres" type="Theme" id=10]

[sub_resource type="Gradient" id=5]
interpolation_mode = 1
offsets = PoolRealArray( 0.324022, 0.994413, 1 )
colors = PoolColorArray( 0.0820312, 0.0820312, 0.0820312, 1, 0.587417, 0.586076, 0.586076, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0, 0, 0, 0.270588 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.756863 )

[sub_resource type="DynamicFont" id=7]
size = 40
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="DynamicFont" id=9]
size = 30
use_mipmaps = true
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0784314, 0.0705882, 0.0705882, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 38.0
texture = SubResource( 2 )
expand = true
flip_v = true

[node name="TextBubble" parent="." instance=ExtResource( 7 )]
margin_left = 46.0
margin_top = 46.0
margin_right = -268.0
margin_bottom = -723.0

[node name="bg" parent="TextBubble" index="1"]
margin_top = -2.0
margin_right = -17.0
margin_bottom = -12.0

[node name="result" type="Label" parent="TextBubble"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -402.0
margin_top = -11.0
margin_right = 386.0
margin_bottom = 121.0
theme = ExtResource( 2 )
text = "You <win/lose>"
align = 1
valign = 1
autowrap = true
uppercase = true

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -376.0
margin_top = 224.0
margin_right = 318.0
margin_bottom = 370.0
custom_styles/panel = SubResource( 6 )

[node name="playBtn" parent="Panel" instance=ExtResource( 5 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -158.0
margin_top = -59.0
margin_right = 158.0
margin_bottom = 59.0
custom_fonts/font = SubResource( 7 )
custom_styles/normal = ExtResource( 6 )
text = "Play Again?"

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 164.0
margin_top = -355.0
margin_right = 656.0
margin_bottom = 238.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="PanelScore" parent="." instance=ExtResource( 9 )]
margin_left = -387.0
margin_top = -195.0
margin_right = 254.0
margin_bottom = 184.0
custom_styles/panel = SubResource( 8 )

[node name="title" type="Label" parent="PanelScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -313.5
margin_top = 21.0
margin_right = 312.5
margin_bottom = 82.0
theme = ExtResource( 2 )
text = "Your Results:"
align = 1
autowrap = true
uppercase = true

[node name="score" type="Label" parent="PanelScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -231.5
margin_top = 259.0
margin_right = 215.5
margin_bottom = 333.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 9 )
text = "Score:"
valign = 1
autowrap = true

[node name="round" type="Label" parent="PanelScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -230.5
margin_top = 101.0
margin_right = 216.5
margin_bottom = 175.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "Round <N>"
align = 1
valign = 1
autowrap = true

[node name="totalQuestions" type="Label" parent="PanelScore"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -231.5
margin_top = 184.0
margin_right = 215.5
margin_bottom = 258.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 9 )
text = "Questions:"
valign = 1
autowrap = true

[node name="logoIcon" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -499.0
margin_top = -112.0
margin_right = -309.0
margin_bottom = 83.0
texture = ExtResource( 3 )
expand = true

[connection signal="pressed" from="Panel/playBtn" to="." method="_on_playBtn_pressed"]

[editable path="TextBubble"]
